--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
                 <artifactId>allure-maven</artifactId>
                 <version>${allure.maven.version}</version>
                 <configuration>
-                    <reportDirectory>allure-report</reportDirectory>
+                    <reportDirectory>target/allure-report</reportDirectory>
                 </configuration>
             </plugin>
             <plugin>
@@ -111,7 +111,7 @@
                     <parallel>all</parallel>
                     <systemProperties>
                         <allure.results.directory>
-                            ${project.build.directory}/target/allure-results
+                            ${project.build.directory}/allure-results
                         </allure.results.directory>
                     </systemProperties>
                 </configuration>
