--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
     <artifactId>example</artifactId>
     <version>1.0</version>
 
-
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <allure.version>2.0-BETA15</allure.version>
         <allure.maven.version>2.8</allure.maven.version>
         <aspectj.version>1.8.9</aspectj.version>
@@ -20,7 +20,6 @@
         <junit.jupiter.version>5.0.0-M4</junit.jupiter.version>
         <junit.vintage.version>4.12.0-M4</junit.vintage.version>
         <junit.platform.version>1.0.0-M4</junit.platform.version>
-        <browser.type>REMOTE_CHROME</browser.type>
     </properties>
 
     <dependencies>
