--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,14 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <allure.version>2.0-BETA19</allure.version>
+        <allure.version>2.6.0</allure.version>
         <allure.maven.version>2.9</allure.maven.version>
-        <aspectj.version>1.8.11</aspectj.version>
         <slf4j.version>1.7.24</slf4j.version>
         <logback.version>1.2.1</logback.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-        <junit.jupiter.version>5.0.1</junit.jupiter.version>
-        <junit.vintage.version>4.12.1</junit.vintage.version>
-        <junit.platform.version>1.0.1</junit.platform.version>
+        <junit.jupiter.version>5.1.0</junit.jupiter.version>
+        <junit.vintage.version>5.1.0</junit.vintage.version>
+        <junit.platform.version>1.1.0</junit.platform.version>
         <surfire.version>2.19.1</surfire.version>
     </properties>
 
@@ -89,7 +88,6 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
-                    <fork>true</fork>
                 </configuration>
             </plugin>
             <plugin>
@@ -97,22 +95,15 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surfire.version}</version>
                 <configuration>
-                    <argLine>
-                        -Xmx1024m -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
-                    </argLine>
-                    <includes>
-                        <include>**/*.java</include>
-                    </includes>
                     <properties>
-                        <includeTag>main</includeTag>
+                        <includeTags>main</includeTags>
                     </properties>
-                    <threadCountMethods>10</threadCountMethods>
-                    <perCoreThreadCount>false</perCoreThreadCount>
-                    <useUnlimitedThreads>true</useUnlimitedThreads>
-                    <reuseForks>true</reuseForks>
-                    <parallel>all</parallel>
                     <systemProperties>
                         <allure.results.directory>target/allure-results</allure.results.directory>
+                        <property>
+                            <name>junit.jupiter.extensions.autodetection.enabled</name>
+                            <value>true</value>
+                        </property>
                     </systemProperties>
                 </configuration>
                 <dependencies>
@@ -122,9 +113,9 @@
                         <version>${junit.platform.version}</version>
                     </dependency>
                     <dependency>
-                        <groupId>org.aspectj</groupId>
-                            <artifactId>aspectjweaver</artifactId>
-                        <version>${aspectj.version}</version>
+                        <groupId>org.junit.jupiter</groupId>
+                        <artifactId>junit-jupiter-engine</artifactId>
+                        <version>${junit.jupiter.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
